# membrane-curvature

./: .gitattributes  .gitignore  .lgtm.yml  .readthedocs.yaml  .readthedocs.yml  AUTHORS  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  deploy.yaml
benchmarks/: asv.conf.json  membranecurvature.py
devtools/: README.md
devtools/conda-envs/: environment.yaml  test_env.yaml  test_min.yaml
doc/: Makefile  api.rst  conf.py  make.bat
doc/_build/doctrees/: api.doctree  getting_started.doctree
doc/_build/doctrees/autosummary/: membrane_curvature.canvas.doctree
doc/_build/html/: objects.inv  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_sources/: getting_started.rst.txt
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  requirements.txt  requirements.yaml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  getting_started.html  index.html  search.html
docs/_build/html/_modules/membrane_curvature/: core.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/autosummary/: membrane_curvature.canvas.rst.txt
docs/_build/html/autosummary/: membrane_curvature.canvas.html
docs/api/: curvature.rst  membrane_curvature.rst  surface.rst
docs/source/: conf.py  index.rst
docs/source/pages/: Algorithm.rst  Curvature_membrane-only_systems.ipynb  Curvature_membrane_protein_nopr_all_atom.ipynb  Tutorials.rst  Usage.rst  Visualization.rst
mdakit_membcurv/: __init__.py  core.py
mdakit_membcurv/lib/: mods.py
mdakit_membcurv/tests/: datafiles.py  test_mdakit_membcurv.py
membrane_curvature/: __init__.py  _version.py  base.py  core.py  curvature.py  surface.py
membrane_curvature/data/: MEMB_traj_short.gro  MEMB_traj_short.xtc  Membrane_protein_fit.gro  Membrane_protein_fit.xtc  test_curvature_abca1.gro  test_curvature_po4_only.gro  test_curvature_po4_only.xtc  test_po4_big.gro  test_po4_inverted_indexes.gro  test_po4_med.gro  test_po4_small.gro  test_po4_small.xtc
membrane_curvature/lib/: mods.py
membrane_curvature/tests/: datafiles.py  test_mdakit_membcurv.py  test_membrane_curvature.py
tests/: test_curvature_abca1.xtc
